[metadata]
name = toggleables-Snakemix66
version = 0.0.1
author = Snakemix66
author_email = sst3ly@gmail.com
description = A package that adds toggleable variables(sort of)
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Programming Language :: Python :: 3
	Licence :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src